<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/login_backgroud"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_signUp_id"
            android:layout_marginTop="@dimen/ten_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_color"
            android:textSize="@dimen/heading_size"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_signup"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/ten_margin"
            android:layout_below="@+id/txt_signUp_id"
            android:background="@color/white_color"/>

        <LinearLayout
            android:layout_width="@dimen/login_screen_margin"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/thirty_margin"
            android:layout_below="@+id/txt_signUp_id">
            <EditText
                android:id="@+id/edt_name_id"
                style="@style/CustomLoginEdittext"
                android:hint="@string/edit_name"
                android:textColor="@color/white_color"
                android:textColorHint="@color/darGrey"
                />
            <EditText
                android:id="@+id/edt_signup_email_id"
                style="@style/CustomLoginEdittext"
                android:layout_marginTop="@dimen/ten_margin"
                android:hint="@string/edit_email"
                android:textColor="@color/white_color"
                android:textColorHint="@color/darGrey"
                />
            <EditText
                android:id="@+id/edt_signup_pass_id"
                style="@style/CustomLoginEdittext"
                android:layout_marginTop="@dimen/ten_margin"
                android:hint="@string/edit_password"
                android:textColor="@color/white_color"
                android:textColorHint="@color/darGrey"
                />
            <EditText
                android:id="@+id/edt_signup_confirmpass_id"
                style="@style/CustomLoginEdittext"
                android:layout_marginTop="@dimen/ten_margin"
                android:hint="@string/edit_confirmPass"
                android:textColor="@color/white_color"
                android:textColorHint="@color/darGrey"
                />
            <EditText
                android:id="@+id/edt_mobile_id"
                style="@style/CustomLoginEdittext"
                android:layout_marginTop="@dimen/ten_margin"
                android:hint="@string/edit_mobile"
                android:textColor="@color/white_color"
                android:textColorHint="@color/darGrey"
                />
            <EditText
                android:id="@+id/edt_dob_id"
                style="@style/CustomLoginEdittext"
                android:layout_marginTop="@dimen/ten_margin"
                android:hint="@string/edit_dob"
                android:textColor="@color/white_color"
                android:textColorHint="@color/darGrey"
                />
            <EditText
                android:id="@+id/edt_country_id"
                style="@style/CustomLoginEdittext"
                android:layout_marginTop="@dimen/ten_margin"
                android:hint="@string/edit_coutry"
                android:textColor="@color/white_color"
                android:textColorHint="@color/darGrey"
                />
            <EditText
                android:id="@+id/edt_reference_id"
                style="@style/CustomLoginEdittext"
                android:layout_marginTop="@dimen/ten_margin"
                android:hint="@string/edit_referal"
                android:textColor="@color/white_color"
                android:textColorHint="@color/darGrey"
                />
            <Button
                android:id="@+id/btn_signUp_id"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/thirty_margin"
                android:layout_height="@dimen/login_screen_height"
                android:text="@string/create_account"
                android:textColor="@android:color/white"
                android:background="@drawable/rectangle_filled_shape"
                android:textAllCaps="false"/>
        </LinearLayout>

    </RelativeLayout>



</ScrollView>