<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="payment module"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/paymentconvertion_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_converion"/>
        <Button
            android:id="@+id/payout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_request"/>
        <Button
            android:id="@+id/paymentstatus_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_status"/>

    </LinearLayout>


</RelativeLayout>